templates/alertmanager/030-Deployment-alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: enmasse
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enmasse
      name: alertmanager
  template:
    metadata:
      labels:
        app: enmasse
        name: alertmanager
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.enmasse.io/operator-infra
                    operator: In
                    values:
                      - true
      containers:
      - image: ${ALERTMANAGER_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        name: alertmanager
        ports:
        - containerPort: 9093
          name: alertmanager
        volumeMounts:
        - mountPath: /etc/alertmanager
          name: alertmanager-config
          readOnly: true
      volumes:
      - configMap:
          name: alertmanager-config
        name: alertmanager-config
