templates/alertmanager/010-Service-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-proxy-cert
  labels:
    app: enmasse
    alertmanager: main
spec:
  ports:
  - name: web
    port: 9093
    targetPort: 9093
  - name: proxy
    port: 443
    targetPort: 8443
  selector:
    alertmanager: main
