templates/alertmanager/060-Route-alertmanager.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: alertmanager
spec:
  port:
    targetPort: alertmanager
  tls:
    termination: edge
  to:
    kind: Service
    name: alertmanager
